--- a/layout2/src/assets/styles/styles.scss
+++ b/layout2/src/assets/styles/styles.scss
@@ -171,6 +171,7 @@
             position: absolute;
             top: 1696px;
             z-index: 101;
+            object-fit: cover;
             .works__work{
                 display: flex;
                 justify-content: center;
@@ -240,6 +241,7 @@
                 .blog__image {
                     width: 270px;
                     height: 270px;
+                    object-fit: cover;
                 }
                 .blog__name {
                     width: 270px;
@@ -329,12 +331,45 @@
                 #switches_mod2:checked ~.panels__sorry{
                     background-color: wheat;
                     display: flex;
+                    top: 0px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                #switches_mod3:checked ~.panels__sorry{
+                    background-color: greenyellow;
+                    display: flex;
+                    top: 0px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: #7E5D6F;
+                }
+                #switches_mod4:checked ~.panels__sorry{
+                    background-color: aqua;
+                    color: #E71414;
+                    display: flex;
+                    top: 0px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                #switches_mod5:checked ~.panels__sorry{
+                    background-color: indigo;
+                    top: 0px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: saddlebrown;
                 }
                 .panels__sorry{
                     width: 100%;
                     position: absolute;
-                    height: 490px;
+                    height: 92%;
                     display: none;
+                    font-family: Raleway;
+                    font-size: 40px;
+                    color: white;
                 }
                 
             }
@@ -504,7 +539,7 @@
         }
     }
 }
-@media (max-width:1700px) and (min-width:321px) {
+@media (max-width:2000px) and (min-width:321px) {
     .header__logo2{
         display: none;
     }
@@ -810,24 +845,85 @@
                 top: 2587px;
                 grid-template-columns: 49% 51%;
                 grid-template-rows: 91%;
-                .slider__panel{
-                    position: absolute;
+                .slider__panels{
                     display: flex;
-                    justify-content: space-between;
-                    width: 170px;
-                    left: 44%;
-                    top: 340px;
-                    .panel__switch{
-                        border: 1px solid #7E5D6F;
+                    justify-content: center;
+                    width: 100%;
+                    height: 100%;
+                    grid-column: 1/3;
+                    gap: 20px;
+                    align-items: center;
+                    .panels__panel{
                         width: 14px;
                         height: 14px;
+                        border: 1px solid #7E5D6F;
                         border-radius: 50%;
-                        z-index: 200;
                     }
-                    #radio1:checked~.panel__switch.switch_mod1{
+                    #switches_mod1:checked ~.panel_mod1{
                         background-color: #5C3249;
                     }
+                    #switches_mod2:checked ~.panel_mod2{
+                        background-color: #5C3249;
+                    }
+                    #switches_mod3:checked ~.panel_mod3{
+                        background-color: #5C3249;
+                    }
+                    #switches_mod4:checked ~.panel_mod4{
+                        background-color: #5C3249;
+                    }
+                    #switches_mod5:checked ~.panel_mod5{
+                        background-color: #5C3249;
+                    }
+                    #switches_mod2:checked ~.panels__sorry{
+                        background-color: wheat;
+                        display: flex;
+                        top: 0px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: 92%;
+                    }
+                    #switches_mod3:checked ~.panels__sorry{
+                        background-color: greenyellow;
+                        display: flex;
+                        top: 0px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: #7E5D6F;
+                        height: 92%;
+                    }
+                    #switches_mod4:checked ~.panels__sorry{
+                        background-color: aqua;
+                        color: #E71414;
+                        display: flex;
+                        top: 0px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: 92%;
+                    }
+                    #switches_mod5:checked ~.panels__sorry{
+                        background-color: indigo;
+                        top: 0px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: saddlebrown;
+                        height: 92%;
+                    }
+                    .panels__sorry{
+                        width: 100%;
+                        position: absolute;
+                        height: 92%;
+                        display: none;
+                        font-family: Raleway;
+                        font-size: 40px;
+                        color: white;
+                    }
+                    
                 }
+                
                 .slider__content{
                     background-color: #5C3249;
                     .article__text1{
@@ -1351,7 +1447,7 @@
                 position: absolute;
                 top: 5095px;
                 grid-template-columns: 100%;
-                grid-template-rows: 212px 326px 32px;
+                grid-template-rows: 212px 283px 32px;
                 .slider__panels{
                     display: flex;
                     justify-content: center;
@@ -1360,6 +1456,63 @@
                     grid-column: auto;
                     gap: 20px;
                     align-items: center;
+                }
+                #switches_mod1:checked ~.panel_mod1{
+                    background-color: #5C3249;
+                }
+                #switches_mod2:checked ~.panel_mod2{
+                    background-color: #5C3249;
+                }
+                #switches_mod3:checked ~.panel_mod3{
+                    background-color: #5C3249;
+                }
+                #switches_mod4:checked ~.panel_mod4{
+                    background-color: #5C3249;
+                }
+                #switches_mod5:checked ~.panel_mod5{
+                    background-color: #5C3249;
+                }
+                #switches_mod2:checked ~.panels__sorry{
+                    background-color: wheat;
+                    top: 0px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                #switches_mod3:checked ~.panels__sorry{
+                    background-color: greenyellow;
+                    display: flex;
+                    top: 0px;
+                    justify-content: center;
+                    align-items: center;
+                    color: #7E5D6F;
+                    
+                }
+                #switches_mod4:checked ~.panels__sorry{
+                    background-color: aqua;
+                    color: #E71414;
+                    top: 0px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;  
+                    height: 94%;
+                }
+                #switches_mod5:checked ~.panels__sorry{
+                    background-color: indigo;
+                    top: 0px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: saddlebrown;
+                }
+                .panels__sorry{
+                    width: 100%;
+                    position: absolute;
+                    display: none;
+                    font-family: Raleway;
+                    font-size: 40px;
+                    color: white;
+                    height: 94%;
                 }
                 
                 .slider__content{
